[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-twikit"
version = "0.1.0"
description = "Twitter search tool for FastMCP using Twikit"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Adhika Setya Pramudita", email = "adhika.setya.p@gmail.com" }
]
dependencies = [
    "fastmcp",
    "twikit",
    "requests",
]

[project.urls]
Homepage = "https://github.com/adhikasp/mcp-twikit"

[project.scripts]
mcp-twikit = "mcp_twikit.twitter:mcp.run"